--- a/sass/blocks/_news.scss
+++ b/sass/blocks/_news.scss
@@ -34,7 +34,7 @@
             font-family: $commons-medium;
 
             &:before {
-                content: url(/img/icons/calendar.svg);
+                content: url(../img/icons/calendar.svg);
                 position: absolute;
                 right: 10px;
                 top: -2px;
